--- a/style.css
+++ b/style.css
@@ -89,18 +89,15 @@ h2{
 @media screen and (max-width:480px){
     body{
         background-color: #0e5587;
-        background-size: cover;
-        background-position: center;
-        
     }
     h1{
-        font-size: 25px;
+        font-size: 15px;
         width: 500px;
         transform: translate(-5px,-15px);
     }
     h2{
         text-align: center;
-        padding-left: 35px;
+        padding-left: 25px;
         transform: translate(0px,-15px);
         font-size: 25px;
         width: 400px;
@@ -119,7 +116,7 @@ h2{
 
     #msg{
         font-size: 20px;
-        transform: translate(-10px,20px);
+        transform: translate(60px,20px);
     }
 
     .user{
@@ -137,14 +134,14 @@ h2{
     }
 
     #number_input{
-        transform: translate(-15px,60px);
+        transform: translate(5px,60px);
 
     }
 
     #submit{
         height: 25px;
         width: 50px;
-        transform: translate(-138px,95px);
+        transform: translate(4    8px,95px);
     }
     .underline{
         background-color: rgb(255, 255, 255);
